<resources>
    <string name="app_name">World News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upcoming">Upcoming</string>
    <string name="hbo_news">HBO NEWS</string>
    <string name="ndtv">NDTV</string>
    <string name="aaj_tak">AAJ TAK</string>
    <string name="zee_news">Zee News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bbc">BBC</string>
</resources>