<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/aaj"
            android:title="@string/aaj_tak"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ndtv"
            android:title="@string/ndtv"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/bbc"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"
            />

        <item
            android:id="@+id/zee"
            android:icon="@drawable/zee"
            android:title="@string/zee_news"
            android:menuCategory="secondary"
            />
    </group>
    <item android:title="@string/upcoming"
        android:menuCategory="secondary"
        
        >
        <menu>
            <item
                android:id="@+id/hbo"
                android:icon="@drawable/hbo"
                android:menuCategory="secondary"
                android:title="@string/hbo_news"
                />

        </menu>
    </item>
</menu>